--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -2,7 +2,7 @@
   user-list works!
 </p>
 
-<h1 class='center'>Liste users</h1>
+<h1 class='center'>{{ "users list" | translate }}</h1>
 <div class='container'>
   <div class="row">
     <div *ngFor='let user of tabUser' class="col s6 m4">
