--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -2,7 +2,7 @@
   user-detail works!
 </p>
 
-<h1 class='center'>Liste users</h1>
+<h1 class='center'>{{ "users list" | translate }}</h1>
 <div class='container'>
   <div class="row">
     <ng-template [ngIf]="userDisplay === 1">
