ajout module http

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -16,6 +16,10 @@
             <p>
               <small>{{ user.name.first }}</small>
             </p>
+            <div *ngFor='let userAddress of user.address' class="col s6 m4">
+                {{ userAddress._id }} - 
+              {{ userAddress.street }}
+            </div>
           </div>
         </div>
       </div>
