Validation champs : email & minlength

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -6,7 +6,7 @@
 <div class='container'>
   <div class="row">
     <ng-template [ngIf]="userDisplay === 1">
-      <div class="card horizontal" (click)="selectPokemon(user)" appBorderCardDirective="red">
+      <div class="card horizontal" (click)="editUser(user)" appBorderCardDirective="red">
         <div class="card-image">
           <img [src]="">
         </div>
