integration create + update USER

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,7 @@
 <p>
   header works!
 </p>
+<a [routerLink]="['/user/edit']">{{ "add user" | translate }}</a> |
 <a [routerLink]="['/user']">{{ "users list" | translate }}</a> |
 
 <div>
