--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -13,9 +13,8 @@
         <div class="card-stacked">
           <div class="card-content">
             <p>{{ user.email }}</p>
-            <p>
-              <small>{{ user.name.first }}</small>
-            </p>
+            <p>{{ user.name.first }}</p>
+            <p>{{ user.name.last }}</p>
           </div>
         </div>
       </div>
@@ -25,4 +24,3 @@
     </ng-template>
   </div>
 </div>
-
