gestion des sessions et token

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
 <a [routerLink]="['/user/edit']">{{ "add user" | translate }}</a> |
 <a [routerLink]="['/user']">{{ "users list" | translate }}</a> |
 
+{{ displayHeadIdentity }} <button (click)="logout()">{{ "logout" | translate }}</button>
+
 <div>
 <button (click)="useLanguage('en')">en</button>
 <button (click)="useLanguage('fr')">fr</button>
