--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
@@ -6,4 +5,9 @@
   </h1>
 </div>
 
-<router-outlet></router-outlet>
+
+
+
+<main>
+  <router-outlet style="margin-top: 80px;"></router-outlet>
+</main>
