--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,23 +1,34 @@
 <app-header [displayHeadIdentity]="displayIdentity"></app-header>
 
-<p>
-  user-edit works!
-</p>
+<mat-card class="login-card">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
 
-<form [formGroup]="userForm">
-  <div class="form-group">
-    <label class="center-block">{{ "email" | translate }}:</label>
-    <input formControlName="email">
-    <div *ngIf="formError.email" class="alert alert-danger">{{ formError.email }}</div>
-  </div>
+  <mat-card-content>
+    <form [formGroup]="userForm">
+      <div>
+        <mat-form-field>
+          <input matInput placeholder='{{ "email" | translate }}' formControlName="email" type="email" name="email"
+            required>
+        </mat-form-field>
+        <div *ngIf="formError.email" class="alert alert-danger">{{ formError.email }}</div>
+      </div>
 
+      <div>
+        <mat-form-field>
+          <input matInput placeholder='{{ "password" | translate }}' formControlName="password" type="password" name="password"
+            required>
+        </mat-form-field>
+        <div *ngIf="formError.password" class="alert alert-danger">{{ formError.password }}</div>
 
-  <div class="form-group">
-    <label class="center-block">{{ "password" | translate }}:</label>
-    <input type="password" formControlName="password">
-    <div *ngIf="formError.password" class="alert alert-danger">{{ formError.password }}</div>
-  </div>
+      </div>
+      <mat-card-actions>
+        <button mat-raised-button type="submit " [disabled]="userForm.invalid " (click)="register()" color="primary">
+          {{ "Envoyer " | translate }}
+        </button>
+      </mat-card-actions>
 
-
-  <button type="submit " [disabled]="userForm.invalid " (click)="register() ">{{ "Envoyer " | translate }}</button>
-</form>
+    </form>
+  </mat-card-content>
+</mat-card>
