--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,6 +1,4 @@
-<p>
-  user-detail works!
-</p>
+<app-header [displayHeadIdentity]="displayIdentity"></app-header>
 
 <h1 class='center'>{{ "users list" | translate }}</h1>
 <div class='container'>
