--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
-
-
-
 <main>
-  <router-outlet style="margin-top: 80px;"></router-outlet>
+  <router-outlet></router-outlet>
 </main>
