--- a/src/app/my-dialog/my-dialog.component.html
+++ b/src/app/my-dialog/my-dialog.component.html
@@ -1,3 +1,5 @@
-<p>
-  my-dialog works!
-</p>
+<h2 mat-dialog-title>{{ dialogTitle }}</h2>
+<mat-dialog-content class="error">{{ dialogBody }} </mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-raised-button (click)="closeDialog()">Ok</button>
+</mat-dialog-actions>
