--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
-<app-header [displayHeadIdentity]="displayIdentity"></app-header>
+<app-header [displayHeadIdentity]="displayIdentity">22 </app-header>
 
-<mat-card class="login-card">
+<mat-card class="card">
   <mat-card-header>
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
@@ -25,7 +25,7 @@
       </div>
       <mat-card-actions>
         <button mat-raised-button type="submit " [disabled]="userForm.invalid " (click)="register()" color="primary">
-          {{ "Envoyer " | translate }}
+          {{ "send" | translate }}
         </button>
       </mat-card-actions>
 
