--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-.fixed-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%  !important;
-  
+body {
+  margin: 0;
 }
+
+
 
 main {
   display: flex;
