--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -21,4 +21,5 @@
       User inconnu
     </ng-template>
   </div>
+  <button type="submit " (click)="openDialog(user._id, user.email)">{{ "Delete address" | translate }}</button>
 </div>
