--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -3,7 +3,7 @@
 <h1 class='center'>{{ "users list" | translate }}</h1>
 <div class='container'>
   <div class="row">
-    <div *ngFor='let user of tabUser' class="col s6 m4">
+    <div *ngFor="let user of tabUser;" class="col s6 m4">
       <div class="card horizontal" (click)="selectPokemon(user)" appBorderCardDirective="red">
         <div class="card-image">
           <img [src]="">
